--- a/Spark_daily_show.ipynb
+++ b/Spark_daily_show.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spark Daily Show RDD\n",
+    "# Spark Daily Show\n",
     "(c) Miradiz Rakhmatov\n",
     "\n",
     "\n",
