--- a/Spark_Hamlet.ipynb
+++ b/Spark_Hamlet.ipynb
@@ -49,6 +49,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -60,7 +67,12 @@
        " 'hamlet@8',\n",
        " 'hamlet@9',\n",
        " 'hamlet@10\\t\\tDRAMATIS PERSONAE',\n",
-       " 'hamlet@29']"
+       " 'hamlet@29',\n",
+       " 'hamlet@30',\n",
+       " 'hamlet@31\\tCLAUDIUS\\tking of Denmark. (KING CLAUDIUS:)',\n",
+       " 'hamlet@74',\n",
+       " 'hamlet@75\\tHAMLET\\tson to the late, and nephew to the present king.',\n",
+       " 'hamlet@131']"
       ]
      },
      "execution_count": 5,
@@ -70,14 +82,21 @@
    ],
    "source": [
     "raw_hamlet = sc.textFile('hamlet.txt')\n",
-    "raw_hamlet.take(5)"
+    "raw_hamlet.take(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1\n",
+    "### As you see above the data is not ready for analysis to be performed. In the next steps, I'm going to clean the RDD into more sutable version for analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1:\n",
     "\n",
     "Let's split the lines on \"\\t\" delimiter "
    ]
@@ -111,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2\n",
+    "## Step 2:\n",
     "\n",
     "### ID transformation:\n",
     "\n",
