--- a/Spark_Hamlet.ipynb
+++ b/Spark_Hamlet.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### As you see above the data is not ready for analysis to be performed. In the next steps, I'm going to clean the RDD into more sutable version for analysis"
+    "### As you see above the data is not ready for analysis to be performed. In the next steps, I'm going to clean the RDD into more suitable version for analysis"
    ]
   },
   {
